--- a/view/admin/store-productAnswer.html
+++ b/view/admin/store-productAnswer.html
@@ -16,24 +16,6 @@
 body{
     background-color: #eee;
 }
-/* 큰 패널 2개*/
-/* 사이드 */
-.sidebar{
-    position: fixed;
-    top: 0; bottom: 0;
-    left: 0;
-    z-index: 200;
-    width: 260px; height: 100%;
-    padding-top: 20px;
-    background-color: white;
-    color: #a9afbb;
-    text-align: center;
-    box-shadow: 0 16px 38px -12px rgb(0 0 0 / 56%),
-                0 4px 25px 0 rgb(0 0 0 / 12%),
-                0 8px 10px -5px rgb(0 0 0 / 20%);
-    transform: translate3d(0px,0,0);
-    transition: all .33s cubic-bezier(.685,.0473,.346,1);
-}
 
 /* 메인 */
 .main_panel{
@@ -77,123 +59,10 @@ body{
     }
 }
 
-/* 사이드 메뉴 */
-/* 로고 */
-.logo{
-    border-bottom: solid hsla(0,0%,71%,.3);
-    height: 60px;
-    margin: 20px 10px;
-}
-.logo a,.logo a:hover{
-    color: #3c4858;;
-    font-size: 20pt;
-    text-decoration: none;
-}
-/* 메뉴 전체 */
-.menu{
-    list-style: none;
-    padding: 0;
-}
-/* 메인메뉴 */
-.menu_header{
-    padding: 15px 0;
-    margin: 0 20px 0 20px;
-    display: flex;
-    justify-content: center;
-}
-.btn_menu_h{
-    width: 100%;
-    height: 60px;
-    color: #a9afbb;
-    border: none;
-    border-radius: 5px;
-    background-color: transparent;
-    text-align: left;
-    padding-left: 25px;
-    font-size: 16pt;
-}
-.btn_menu_h i{
-    margin-right: 10px;
-}
-.btn_menu_h:hover{
-    color: #a9afbb;
-    background-color: hsla(0,0%,78%,.2);
-}
-.menu li.active button{
-    color: white;
-    background-color: #35ab6f;
-    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
-}
-/* 서브메뉴 */
-.menu_sub{
-    /* border: solid 0.5px; */
-    /* height: 250px; */
-    margin: -20px 15px 10px 15px;
-    padding: 20px 10px 10px 10px;
-    border-radius: 5px;
-    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 14%);
-}
-.btn_menu_s{
-    width: 85%;
-    height: 50px;
-    color: #56c084;
-    border: none;
-    border-radius: 5px;
-    background-color: transparent;
-    text-align: left;
-    margin: 0 0 10px 10px;
-    padding-left: 10px;
-    font-size: 12pt;
-}
-.btn_menu_s i{
-    margin-right: 10px;
-}
-.btn_menu_s:hover{
-    color: #a9afbb;
-    background-color: hsla(0,0%,78%,.2);
-}
-.menu_sub .menu li.active button{
-    color: white;
-    background-color: #56c084;
-    box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
-}
-/* 사이드 마지막 */
-.menu_footer{
-    position: absolute;
-    bottom: 15px;
-    left: 40px;
-    width: 70%;  height: 45px;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-    line-height: 3;
-}
-.menu_footer a{
-    color: #a9afbb;
-    text-decoration: none;
-}
-.menu_footer:hover{
-    color: #a9afbb;
-    background-color: hsla(0,0%,78%,.2);
-}
-/* 메뉴 토글 아이콘 */
-.navbar-toggler-icon{
-    display: block;
-    width: 40px; height: 6px;
-    margin-top: 6px;
-    background: #555;
-    border-radius: 1px;
-    outline: 0;
-}
-
-
-
-
 /* 메인 내용 */
 /* 검색 */
 .search_wrap{
     margin: 10px 40px;
-    /* width: 1300px; */
     position: relative;
     z-index: 10;
 }
@@ -202,7 +71,6 @@ body{
     align-items: center;
     height: 90px;
     min-width: 1260px;
-    /* width: 750px; */
     margin: 20px; padding: 20px 40px 20px 300px;
     border-radius: 5px;
     background-color: #35ab6f;
@@ -382,7 +250,6 @@ body{
     min-width: 1300px;
     margin: -40px 40px 10px 40px;
     padding: 30px 30px 10px 30px;
-    /* overflow-x: auto; */
     border-radius: 5px;
     background-color: white;
     box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%),
@@ -451,7 +318,6 @@ select::-ms-expand{
     display: none;
 }
 
-
 .table td{
     vertical-align: middle;
     word-break:break-all;
@@ -465,17 +331,30 @@ select::-ms-expand{
     background-color: #35ab6f;
     box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(156 39 176 / 40%);
 }
-/* .tab_btn:hover{
-    box-shadow: 0 14px 26px -12px rgb(133 217 174 / 42%),
-                0 4px 23px 0 rgb(0 0 0 / 12%),
-                0 8px 10px -5px rgb(133 217 174 / 20%);
-} */
 .tab_btn:active{
     background: radial-gradient(#35ab6f,#56c084);
     transition: all .33s cubic-bezier(.685,.0473,.346,1)
 }
 
-
+/* 페이징 */
+.admin_page{
+    min-height: 100px;
+    margin: 30px 0;
+}
+#admin_items .pagination{
+    justify-content: center;
+}
+#admin_items .page-item.active .page-link{
+    background-color: #35ab6f;
+    border-color: #35ab6f;
+    color: white;
+}
+#admin_items a{
+    color: #424242;
+}
+#admin_items .page-link:focus{
+    box-shadow: none;
+}
 
 /* 체크박스 색 바꾸기 */
 #table1 .custom-checkbox{
@@ -504,14 +383,9 @@ select::-ms-expand{
 }
 
 
-
-
 .hiddenRow {
     padding: 0 !important;
 }
-
-
-
 
 #marker {
     transform: scale(1);
@@ -590,15 +464,6 @@ select::-ms-expand{
     100% { opacity:100%; }
 }​ 
 
-
-
-
-
-
-
-
-
-
 </style>
 
 </head>
@@ -606,59 +471,12 @@ select::-ms-expand{
 
 <div class="container-fluid" style="height: 100vh;">
 
-    <div class="sidebar" id="side_accordion">
-        <div class="accordion" id="menu_accordion">
-
-            <div class="logo">
-                <a href="#none"><i class="fas fa-file-signature"></i> 관리자 화면</a>             
-            </div>
-
-            <ul class="menu">
-                <li class="menu_header active">
-                    <button class="btn_menu_h" type="button" data-toggle="collapse" data-target="#menu_store"><i class="fas fa-boxes"></i> 스토어</button>
-                </li>
-
-                <li id="menu_store" class="collapse" data-parent="#menu_accordion">
-                    <div class="menu_sub">
-                        <ul class="menu">
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-truck"></i> 배송현황</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-chart-bar"></i> 매출현황</button></li>
-                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-addProduct.html'"><i class="fas fa-chalkboard"></i> 제품등록</button></li>
-                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-productAnswer.html'"><i class="fab fa-replyd"></i> 답변등록</button></li>
-                        </ul>
-                    </div>
-                </li> <!-- 스토어 서브메뉴 끝 -->
-
-                <li class="menu_header">
-                    <button class="btn_menu_h" type="button" data-toggle="collapse"
-                        data-target="#menu_comt"><i class="far fa-comments"></i> 커뮤니티</button>
-                </li>
-                
-                <li id="menu_comt" class="collapse" data-parent="#menu_accordion">
-                    <div class="menu_sub">
-                        <ul class="menu">
-                            <li><button class="btn_menu_s active" type="button"><i class="fas fa-user-cog"></i> 회원관리</button></li>
-                            <li><button class="btn_menu_s" type="button" onclick="location.href='mainAdmin-storyTag.html'"><i class="fas fa-tags"></i> 사진태그등록</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="fas fa-clipboard"></i> 커뮤니티 관리</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="far fa-edit"></i> Q&A게시판 관리</button></li>
-                            <li><button class="btn_menu_s" type="button"><i class="far fa-calendar-check"></i> 이벤트 등록</button></li>
-                        </ul>
-                    </div>
-                </li> <!-- 커뮤니티 서브메뉴 끝 -->
-                
-                <li class="menu_footer">
-                    <a href="../../index.html"><i class="fas fa-undo-alt"></i> 돌아가기</a>
-                </li>
-                
-            </ul> <!-- 메뉴리스트 끝 -->
-
-
-        </div> <!-- 아코디언 끝 -->
-    </div> <!-- 사이드바 메뉴 끝 -->
+    <!-- 사이드바 메뉴 -->
+    <div include-html="sidebar.html"></div>
 
     <!-- 메인화면 -->
-    <div class="main_panel" style="height: 800px;">
-        <div class="p-4" style="height: 150px; border: solid;"><!-- 헤드 -->
+    <div class="main_panel">
+        <div class="p-4" style="height: 80px;"><!-- 헤드 -->
             <!-- 사이드바 토글 버튼 -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#side_accordion">
                 <span class="navbar-toggler-icon icon-bar"></span>
@@ -740,12 +558,8 @@ select::-ms-expand{
         </div>
 
         
-        <div class="row" style="margin-top: 20px; justify-content:center; height: 20px;">
-            <div class="col offset-xl-3">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination" id="pagination">123</ul>
-                </nav>
-            </div>
+        <div class="admin_page" id="admin_items">
+            <!-- 배송현황 페이지 번호 -->
         </div>
         
     </div>
@@ -759,28 +573,13 @@ select::-ms-expand{
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script><!-- jQuery UI 라이브러리 -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script> <!-- 날짜 포맷 라이브러리 -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/ko.js"></script> <!-- 날짜 포맷 라이브러리 -->
-
-<!-- <script src="../../js/includeHTML.js"></script>
-<script src="../../js/header.js"></script> -->
+<script src="../../js/includeHTML.js"></script>
+<script src="../../js/adminSide.js"></script>
 
 <script>
 $(document).ready(function() {
 
     $('div[name=itemDetail]').hide();
-
-    $('.menu_header').click( function() { //사이드 메뉴 활성화
-        $('.menu_header').removeClass('active')
-        $(this).addClass('active');
-    });
-
-    $('.menu_sub li').click( function() { //사이드 서브메뉴 활성화
-        $('.menu_sub li').removeClass('active')
-        $(this).addClass('active');
-    });
-
-    $('.navbar-toggler').click( function() { //사이드 토글
-        $('.sidebar').addClass('side_open')
-    });
 
     $('.move_input input').focus( function() { // 날짜 선택시 글씨 이동 이벤트
         $(this).parent().addClass('active')
@@ -1014,17 +813,12 @@ function autoCheck() {
 };
 
 
-
-
 //테이블 로우 클릭 시
 $(document).on('click', '.accordion-toggle', function(event) {
 
     //let cardSeq = $(this).attr('seq');
     //getProductTag(cardSeq);
 });
-
-
-
 
 
 </script>
